fix: various replaced element widths too wide (#9)
* fix: various replaced element widths too wide

* Update extension.less

--- a/resources/less/forum/extension.less
+++ b/resources/less/forum/extension.less
@@ -11,13 +11,14 @@
   // Prevents interactivity with items within the excerpt
   pointer-events: none;
 
-  img {
+  * {
     max-width: 100%
   }
 
   .DiscussionPage-list & {
     display: none;
   }
+
   @media @phone {
     display: none;
   }
@@ -32,7 +33,7 @@
   color: @muted-more-color;
   display: block;
 
-  img {
+  * {
     max-width: 100%
   }
 
